syntax = "proto3";

package testdata;
option go_package = "github.com/hori-ryota/go-codegen/codegen/error/internal/testdata/proto";
option java_multiple_files = true;
option java_package = "com.github.horiryota.gocodegen.error.testdata";
option java_outer_classname = "ErrorProto";

message Error {
  string code = 1;
  repeated ErrorDetail details = 2;
}

message ErrorDetail {
  string code = 1;
  repeated string args = 2;
}